[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actors/RunnerEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/runner_enemy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.1592, 33.6143 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.744, 13.2546 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 52.7821, 41.2516 )

[node name="RunnerEnemy" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )
speed = Vector2( 1220, 800 )

[node name="runner_enemy" type="Sprite" parent="."]
position = Vector2( 0, -46.527 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.773743, -40.3077 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.273574, -12.8579 )
scale = Vector2( 1.9575, 1.51979 )

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0.00392157, 0.0431373, 0.996078, 1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, -79.6994 )
shape = SubResource( 2 )

[node name="SameKindDetector" type="Area2D" parent="."]
modulate = Color( 0.644531, 0.521164, 0.521164, 1 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SameKindDetector"]
position = Vector2( 0.187744, -34.3119 )
shape = SubResource( 3 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="SameKindDetector" to="." method="_on_SameKindDetector_body_entered"]
